# rust_web_serial

./: Cargo.toml  README.md  book.epub
src/: main.rs  template.rs
src/source/: mod.rs  royal_road.rs
templates/: chapter.html  content.opf  cover.html  nav.xhtml
